syntax = "proto3";

package cart;

option go_package = "./;cart";

service Cart {
    rpc GetSingleCart(CartInfo) returns (CartData) {}
    rpc ClearCart(CartInfo) returns (CartData) {}
}

message CartInfo {
    string customerId = 1;
}

message CartData {
    string id = 1;
    string customerId = 2; 
    repeated CartItem items = 3;
}

message CartItem {
    string productId = 1;
    int32 quantity = 2;
}